# hyprland-wallpaper-manager

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  build.sh  gui.ui  install.sh  uninstall.sh
include/: cmdUI.h  configurator.h  gui.h  image.h  imageManager.h  mainWindow.h  scheduler.h  settings_ui.h  tui.h  utils.h  wallpaper.h  wallpaperChanger.h  wallpaperManager.h
src/: cmdUI.cpp  configurator.cpp  main.cpp  utils.cpp
src/core/: configurator.cpp  imageManager.cpp  scheduler.cpp  wallpaperChanger.cpp  wallpaperManager.cpp
src/gui/: gui.cpp  mainWindow.cpp  settings_ui.cpp
src/tui/: tui.cpp
ui/: gui.ui  popupwindow.ui  settings.ui
